Correction overflow-x dû au module météo

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ body {
     font-family: "Open Sans", sans-serif;
     font-size: 1.25rem;
     color: #2C3E50;
+    overflow-x: hidden; /* Sinon module météo replié crée un overflow */
 }
 
 .container {
